2001-06-13  Sven Wischnowsky  <wischnow@zsh.org>

	* 14897 (and Oliver Kiddle: 14862): Completion/Base/Utility/_values,
	Completion/Unix/Command/_mount, Completion/Unix/Type/_dir_list,
	Src/Zle/computil.c: fix for comparguments (completing after
	single letter options that get their argument in the next
	word); make _values ignore some of the standard option it may
	get; make _mount use _dir_list in some places and improve that;
	`document' comparguments and compvalues with some comments in
	computil.c

	* 14883 (Jos Backus): Completion/Unix/Command/_mount: add code for
	BSDish systems

	* 14841: Completion/Base/Utility/_values, Src/Zle/computil.c:
	new word parsing for compvalues; this should now handle empty
	separators correctly, as far as it is possible

2001-06-13  Wayne Davison  <wayned@users.sourceforge.net>

        * 14793: Src/hist.c: Don't mark a HIST_TMPSTORE entry with HIST_OLD
	so that the HFILE_FAST algorithm in savehistfile() will recheck this
	histnum later.

2001-06-13  Andrej Borsenkow <bor@zsh.org>

	* 14766: Src/prompt.c: uniform %l substitution

2001-06-13  Peter Stephenson  <pws@csr.com>

	* unposted: Completion/compinstall: spotted by Bart: assignments
	when finding $fpath if not set in current shell were completely
	garbled.

2001-06-11  Peter Stephenson  <pws@csr.com>

	* 14840: Doc/Zsh/options.yo: document search behaviour with
	PATH_DIRS option.

2001-06-10  Clint Adams <clint@zsh.org>

	* 14830: config.guess, config.sub:
	upgrade to modern versions.

2001-06-06  Andrej Borsenkow <bor@zsh.org>

	* 14772: David Lebel <lebel@lebel.org>: zshconfig.ac: patch
	for dynamic linking on OpenBSD

	* 14679, Bart 14693, 14758, 14760: configure.ac, zshconfig.ac,
	.distfiles, Makefile.in, configure.in, Src/mkmakemod.sh: Allow
	processing by both autoconf-2.13 and autoconf-2.50; remove
	config.status hack for autoconf-2.50

2001-06-06  Sven Wischnowsky <wischnow@zsh.org>

	* 14736: Doc/Zsh/compsys.yo: make docs for _wanted and